--- a/index.html
+++ b/index.html
@@ -7,8 +7,67 @@
     <title>Entregable 2</title>
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
 </head>
-<body>
-    
-</body>
+<body class="container">
+  <header>
+      <nav
+        class="navbar navbar-expand-lg navbar-light"
+        style="background-color: rgba(34, 193, 195, 1)"
+      >
+      <a class="navbar-brand" href="#">SEGUNDO ENTREGABLE UCAMP</a>
+      </nav>
+    </header>
+    <section style="margin:20px;" class="row row-cols-1">
+      <div class="col" style="height:60px;">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Stuff to Do"
+            aria-describedby="basic-addon1"
+            id="toDoText"
+          />
+        </div>
+        <p id="editText">editing item...</p>
+      </div>
+      <div class="input-group mb-3">
+        <button style="width:100%" id="mainButton" onclick="InsertToTable()" type="button" class="btn btn-primary">
+          Add
+        </button>
+      </div>
+    </section>
+    <section class="row row-cols-1">
+      <table id="toDoTable" class="table">
+        <thead>
+          <tr>
+            <th scope="col">Code</th>
+            <th scope="col">To Do</th>
+            <th scope="col">Options</th>
+          </tr>
+        </thead>
+        <tbody id="toDoTBody">
+          
+        </tbody>
+      </table>
+    </section>
+    <footer class="footer">
+      <p>© Copyright - 2021</p>
+    </footer>
+  </body>
 </html>
